Have been resolved that page doesn't fit to screen

--- a/Simon Game Challenge/styles.css
+++ b/Simon Game Challenge/styles.css
@@ -25,8 +25,8 @@ body {
 .btn {
   margin: 25px;
   display: inline-block;
-  height: 200px;
-  width: 200px;
+  height: 150px;
+  width: 150px;
   border: 10px solid black;
   border-radius: 20%;
 }
